Add Create Campaign Functionality (mongodb and Purecloud)

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,82 @@ node_modules/*
 data/*
 mongosetup.bat
 mongorun.bat
+data/WiredTiger
+data/WiredTiger.lock
+data/WiredTiger.turtle
+data/WiredTiger.wt
+data/_mdb_catalog.wt
+data/collection-0--4842348663346276965.wt
+data/collection-2--4842348663346276965.wt
+data/collection-4--4842348663346276965.wt
+data/collection-6--4842348663346276965.wt
+data/index-1--4842348663346276965.wt
+data/index-3--4842348663346276965.wt
+data/index-5--4842348663346276965.wt
+data/index-7--4842348663346276965.wt
+data/index-8--4842348663346276965.wt
+data/mongod.lock
+data/sizeStorer.wt
+data/diagnostic.data/metrics.2018-05-03T08-28-43Z-00000
+data/journal/WiredTigerLog.0000000001
+node_modules/body-parser/HISTORY.md
+node_modules/body-parser/LICENSE
+node_modules/body-parser/README.md
+node_modules/body-parser/index.js
+node_modules/body-parser/package.json
+node_modules/body-parser/lib/read.js
+node_modules/body-parser/lib/types/json.js
+node_modules/body-parser/lib/types/raw.js
+node_modules/body-parser/lib/types/text.js
+node_modules/body-parser/lib/types/urlencoded.js
+node_modules/iconv-lite/.npmignore
+node_modules/iconv-lite/.travis.yml
+node_modules/iconv-lite/Changelog.md
+node_modules/iconv-lite/LICENSE
+node_modules/iconv-lite/README.md
+node_modules/iconv-lite/package.json
+node_modules/iconv-lite/encodings/dbcs-codec.js
+node_modules/iconv-lite/encodings/dbcs-data.js
+node_modules/iconv-lite/encodings/index.js
+node_modules/iconv-lite/encodings/internal.js
+node_modules/iconv-lite/encodings/sbcs-codec.js
+node_modules/iconv-lite/encodings/sbcs-data.js
+node_modules/iconv-lite/encodings/sbcs-data-generated.js
+node_modules/iconv-lite/encodings/utf16.js
+node_modules/iconv-lite/encodings/utf7.js
+node_modules/iconv-lite/encodings/tables/big5-added.json
+node_modules/iconv-lite/encodings/tables/cp936.json
+node_modules/iconv-lite/encodings/tables/cp949.json
+node_modules/iconv-lite/encodings/tables/cp950.json
+node_modules/iconv-lite/encodings/tables/eucjp.json
+node_modules/iconv-lite/encodings/tables/gbk-added.json
+node_modules/iconv-lite/encodings/tables/shiftjis.json
+node_modules/iconv-lite/lib/bom-handling.js
+node_modules/iconv-lite/lib/extend-node.js
+node_modules/iconv-lite/lib/index.js
+node_modules/iconv-lite/lib/index.d.ts
+node_modules/iconv-lite/lib/streams.js
+node_modules/raw-body/HISTORY.md
+node_modules/raw-body/LICENSE
+node_modules/raw-body/README.md
+node_modules/raw-body/index.js
+node_modules/raw-body/index.d.ts
+node_modules/raw-body/package.json
+node_modules/raw-body/node_modules/depd/History.md
+node_modules/raw-body/node_modules/depd/LICENSE
+node_modules/raw-body/node_modules/depd/Readme.md
+node_modules/raw-body/node_modules/depd/index.js
+node_modules/raw-body/node_modules/depd/package.json
+node_modules/raw-body/node_modules/depd/lib/browser/index.js
+node_modules/raw-body/node_modules/depd/lib/compat/callsite-tostring.js
+node_modules/raw-body/node_modules/depd/lib/compat/event-listener-count.js
+node_modules/raw-body/node_modules/depd/lib/compat/index.js
+node_modules/raw-body/node_modules/http-errors/HISTORY.md
+node_modules/raw-body/node_modules/http-errors/LICENSE
+node_modules/raw-body/node_modules/http-errors/README.md
+node_modules/raw-body/node_modules/http-errors/index.js
+node_modules/raw-body/node_modules/http-errors/package.json
+node_modules/raw-body/node_modules/setprototypeof/LICENSE
+node_modules/raw-body/node_modules/setprototypeof/README.md
+node_modules/raw-body/node_modules/setprototypeof/index.js
+node_modules/raw-body/node_modules/setprototypeof/package.json
