--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "start": "node ./bin/www"
   },
   "devDependencies": {
-    "express": "~4.11.2",
     "http-proxy": "~1.8.1",
     "request": "~2.53.0"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
