Removed and reset hardcoded credentials.

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ node_modules/raw-body/node_modules/setprototypeof/LICENSE
 node_modules/raw-body/node_modules/setprototypeof/README.md
 node_modules/raw-body/node_modules/setprototypeof/index.js
 node_modules/raw-body/node_modules/setprototypeof/package.json
+config.js
